# Cry-Steam-Plugin

./: .gitignore  Game.cryproject  Game.sln  Plugin.cryproject  Plugin.lnk  README.md  Sandbox.Game.csproj  UpgradeLog.htm
Assets/Animations/: skeletonlist.xml.cryasset
Assets/Animations/Mannequin/ADB/: FirstPersonControllerDefinition.xml.cryasset  PlayerFragmentIds.xml.cryasset  PlayerTags.xml.cryasset
Assets/Animations/Mannequin/Preview/: Player.xml.cryasset
Assets/Animations/editor/: reference_preview_0.caf.cryasset
Assets/Animations/motusAnims/: idle_3p.caf.cryasset  jog_bck_3p.caf.cryasset  jog_fwd_3p.caf.cryasset  run_fwd_3p.caf.cryasset  walk_bck_3p.caf.cryasset  walk_fwd_3p.caf.cryasset
Assets/Animations/motusAnims/bspace/: 1DONE-BSpace_RotateRIFLE.bspace
Assets/Animations/motusAnims/ide2Move/: idle_to_jog_3p.caf.cryasset  idle_to_run_3p.caf.cryasset  idle_to_walk_3p.caf.cryasset  jog_to_idle_3p.caf.cryasset  run_to_idle_3p.caf.cryasset  walk_to_idle_3p.caf.cryasset
Assets/Animations/motusAnims/rifleAnims/: rifleAim_idle_3p.caf.cryasset  rifleWalkAim_bwd_3p.caf.cryasset  rifleWalkAim_fwd_3p.caf.cryasset  stepRifleAimRotate_lft_90_3p.caf.cryasset  stepRifleAimRotate_rgt_90_3p.caf.cryasset  walkcrossRifleAim_bck_lft_3p.caf.cryasset  walkcrossRifleAim_bck_rgt_3p.caf.cryasset  walkcrossRifleAim_fwd_lft_3p.caf.cryasset  walkcrossRifleAim_fwd_rgt_3p.caf.cryasset  walkstrafeRifleAim_lft_3p.caf.cryasset  walkstrafeRifleAim_rgt_3p.caf.cryasset
Assets/Animations/motusAnims/stepRotate/: stepRotate_lft_135_3p.caf.cryasset  stepRotate_lft_180_3p.caf.cryasset  stepRotate_lft_45_3p.caf.cryasset  stepRotate_lft_90_3p.caf.cryasset  stepRotate_rgt_135_3p.caf.cryasset  stepRotate_rgt_180_3p.caf.cryasset  stepRotate_rgt_45_3p.caf.cryasset  stepRotate_rgt_90_3p.caf.cryasset
Assets/Animations/motusAnims/strafe/: jogcross_bck_lft_3p.caf.cryasset  jogcross_bck_rgt_3p.caf.cryasset  jogcross_fwd_lft_3p.caf.cryasset  jogcross_fwd_rgt_3p.caf.cryasset  jogstrafe_lft_3p.caf.cryasset  jogstrafe_rgt_3p.caf.cryasset  runcross_fwd_lft_3p.caf.cryasset  runcross_fwd_rgt_3p.caf.cryasset  runstrafe_lft_3p.caf.cryasset  runstrafe_rgt_3p.caf.cryasset  walkcross_bck_lft_3p.caf.cryasset  walkcross_bck_rgt_3p.caf.cryasset  walkcross_fwd_lft_3p.caf.cryasset  walkcross_fwd_rgt_3p.caf.cryasset  walkstrafe_lft_3p.caf.cryasset  walkstrafe_rgt_3p.caf.cryasset
Assets/Animations/motusAnims/turns/: jogturn_lft_3p.caf.cryasset  jogturn_rgt_3p.caf.cryasset  runturn_lft_3p.caf.cryasset  runturn_rgt_3p.caf.cryasset  walkturn_lft_3p.caf.cryasset  walkturn_rgt_3p.caf.cryasset
Assets/Audio/sdlmixer/assets/: p_pro_impact_bullet_impact_metal_thick.ogg.cryasset
Assets/Levels/: example.level.cryasset
Assets/Levels/example/: example.level  filelist.xml  filelist.xml.cryasset  level.pak
Assets/Levels/example/Layers/: main.lyr  main.lyr.bak  terrain.lyr
Assets/Levels/example/leveldata/: Environment.xml.cryasset
Assets/Libs/MaterialEffects/: MaterialEffects.xml.cryasset  SurfaceTypes.xml.cryasset
Assets/Libs/MaterialEffects/FXLibs/: collision.xml.cryasset
Assets/Libs/config/: defaultprofile.xml.cryasset
Assets/Libs/config/Profiles/default/: actionmaps.xml.cryasset  attributes.xml.cryasset  profile.xml.cryasset
Assets/Libs/config/Profiles/default/levelrotation/: levelrotation.xml.cryasset
Assets/Libs/environmentpresets/: example.env.cryasset  example.xml.cryasset
Assets/Libs/flownodes/: FlownodeBlacklist.xml.cryasset  Substitutions.xml.cryasset
Assets/Materials/: bullet.mtl.cryasset
Assets/Objects/Characters/SampleCharacter/: firstperson.cdf.cryasset  mcg_ddna.dds.cryasset  mcg_diff.dds.cryasset  mcg_spec.dds.cryasset  motusBody.skin.cryasset  motusBodyHeadless.skin.cryasset  motusBodyMAT.mtl.cryasset  skelProxy.chr.cryasset  thirdperson.cdf.cryasset
Assets/Objects/Spaceman/: spaceman.cdf  spaceman.cdf.cryasset  spaceman_skeleton.chr  spaceman_skeleton.chr.cgf  spaceman_skeleton.chr.cryasset  spaceman_skeleton.chrparams
Assets/Objects/Weapons/SampleWeapon/: defaultWeapon.mtl.cryasset  defaultweapon.cgf.cryasset  motusWeaponMAT.mtl.cryasset  motusweapon.cgf.cryasset
Assets/Scripts/: GameObjectSerializationOrder.xml.cryasset
Assets/Scripts/AI/: Factions.xml.cryasset
Assets/Scripts/network/: CompressionPolicy.xml.cryasset  EntityScheduler.xml.cryasset  Scheduler.xml.cryasset
Assets/Textures/cubemaps/example/: environmentprobe1_cm.dds.cryasset  environmentprobe1_cm_diff.dds.cryasset
Code/: CMakeLists.txt  Plugin.cpp  Plugin.h  Plugin.sln  StdAfx.h  UpgradeLog.htm
Code/Components/: SteamOnlineSystemComponent.cpp  SteamOnlineSystemComponent.h
Code/CryPlugins/CryLobby/Module/: LobbyCVars.cpp
Code/friends/: SteamFriends.cpp  SteamFriends.h
Code/lobby/: CommonICryLobby.h  CryLobby.h  CryLobbyPacket.h  CryTCPServiceFactory.h  ICryLobby.h  ICryLobbyPrivate.h  ICryMatchMaking.h  INetEntity.h  INetworkPrivate.h  SteamLobby.cpp  SteamLobby.h  steam_int_h.h
Code/public/: public.csproj
Code/server/: PlatformIdentifier.h  SteamServer.cpp  SteamServer.h  SteamTypes.h  desktop.ini
Code/steam/: steam.csproj
sdk/public/steam/: steam_api_interop.cs.cryasset
sdk/tools/goldmaster/disk_assets/resources/: click.wav.cryasset  hover.wav.cryasset  launch.wav.cryasset
solutions/win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code_uber.cpp  Editor.vcxproj  GameLauncher.vcxproj  GameServer.vcxproj  GameServer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Plugin.autogen.rc  Plugin.sln  Plugin.vcxproj  Plugin.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lobby_uber.cpp  steam_uber.cpp
solutions/win64/CRYENGINE/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CRYENGINE_Win64.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
user/sandbox/: Personalization.json
user/shaders/cache/d3d11/: version.txt
